# agentkv

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  chat.py  demo_agent.py  pyproject.toml  test_agent.py  test_concurrency.py  test_header_size.cpp  test_install.py  test_node_size.cpp  test_ollama.py  test_size.cpp  test_v02.py  test_v03.py  test_v04.py  test_v05.py  test_v06.py  test_v07_full.py
.github/workflows/: build-wheels.yml
agentkv/: __init__.py  context.py  langgraph_store.py  ollama.py  tools.py
benchmarks/: bench_comparison.py
examples/: agent_memory.py  chatbot.py  local_rag.py
src/: bindings.cpp  engine.cpp  engine.h  main.cpp  mmap_platform.h  simd.h  slb.cpp  slb.h  storage.h
src/agentkv/: __init__.py  langgraph_store.py
