[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "agentkv"
version = "0.1.0"
description = "Zero-Copy Memory-Mapped Graph Memory for Agents"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.verbose = true
wheel.packages = ["agentkv"]